--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,11 @@ nav {
     flex-direction: column;
 }
 
+.about-me__info {
+    display: flex;
+    flex-direction: column;
+}
+
 .about-me__info--container {
     display: flex;
     align-items: center;
@@ -115,4 +120,17 @@ nav {
 
 .about-me__info--title {
     margin-bottom: 16px;
+}
+
+.about-me__link {
+    font-size: 20px;
+    color: #242424;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.about-me__img--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
 }
