--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ li {
 }
 
 .flex-1 {
-    display: 1;
+    flex: 1;
 }
 
 .row {
@@ -42,6 +42,10 @@ li {
 
 .text--purple {
     color: #6030b1;
+}
+
+section:nth-child(even) {
+    background-color: #f8f8f8;
 }
 
 nav {
@@ -133,4 +137,8 @@ nav {
     flex: 1;
     display: flex;
     align-items: center;
+}
+
+.about-me__img {
+    width: 100%;
 }
